om/ompy/parser/test/programs/illformed/escaped_close.om
do {
  hello wo
  { rld `} }
====
1
3
3
